Fix: duplicate align-items style

--- a/src/components/TeamMemberTasks/style.module.css
+++ b/src/components/TeamMemberTasks/style.module.css
@@ -505,8 +505,7 @@
   overflow: visible !important;
   text-align: left;
 
-  display: flex;
-  align-items: flex-start;  
+  display: flex;  
   /* min-width: 150px; */
 }
 
